prevent overlapping of image and text

--- a/src/pages/design/controls.scss
+++ b/src/pages/design/controls.scss
@@ -21,6 +21,7 @@
             margin-left: auto;
             margin-right: auto;
             display: block;
+            max-height: 90%;
         }
     }
 }
